# Fight_Game_Colloseum2D1

./: Brute.cpp  Brute.h  CMakeLists.txt  Character.cpp  Character.h  Ciclop.cpp  Ciclop.h  GameWindow.cpp  GameWindow.h  GladiatorFactory.cpp  GladiatorFactory.h  LobbyOverlay.cpp  LobbyOverlay.h  Mage.cpp  Mage.h  Projectile.cpp  Projectile.h  README.md  SettingsOverlay.cpp  SettingsOverlay.h  SoundManager.cpp  SoundManager.h  Spear.cpp  Spear.h  Swordsman.cpp  Swordsman.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h  arena.cpp  arena.h  gladiator.cpp  gladiator.h  main.cpp  menugame.cpp  menugame.h  stat.h  workflow.yml
.github/: workflow.yml
.github/workflows/: ci.yml
src/: resources.qrc
